Header and nav started

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,40 @@
-.yes {
-    color: blue;
+*{
+    font-family: 'Lato', sans-serif;
 }
+header {
+    top: 0;
+    display: flex;
+    height: 15%;
+    position: fixed;
+    background-color: brown;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font: weight bolder;
+}
+header img {
+    height: 60%;
+}
+#Home-button img{
+    width: 8%;
+}
+nav {
+    padding-top: 5%;
+    margin-top: 15%;
+    margin-right: 0;
+    width: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+nav ul{
+    list-style: none;
+}
+main {
+    display: block;
+    margin-top: 15%;
+    position: relative;
+}
+
+
